--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.recsyschallenge.evaluate</groupId>
-    <artifactId>evaluate</artifactId>
+    <artifactId>rscevaluator</artifactId>
     <packaging>jar</packaging>
     <version>0.1-SNAPSHOT</version>
 
