--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,18 @@
     <groupId>com.recsyschallenge.evaluate</groupId>
     <artifactId>rscevaluator</artifactId>
     <packaging>jar</packaging>
-    <version>0.11</version>
+    <version>0.12</version>
 
     <dependencies>
         <dependency>
             <groupId>net.recommenders.rival</groupId>
             <artifactId>rival-evaluate</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.1</version>
         </dependency>
         <dependency>
             <groupId>net.recommenders.rival</groupId>
             <artifactId>rival-core</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.1</version>
         </dependency>
     </dependencies>
 
@@ -27,12 +27,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>1.3</version>
                 <configuration>
-                    <mainClass>com.recsyschallenge.evaluate.Evaluator</mainClass>
+                    <mainClass>com.recsyschallenge.evaluate.Test</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -72,6 +74,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <archive>
                         <manifest>
