--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.3</version>
                 <configuration>
-                    <mainClass>com.recsyschallenge.evaluate.Test</mainClass>
+                    <mainClass>com.recsyschallenge.evaluate.Evaluator</mainClass>
                 </configuration>
             </plugin>
             <plugin>
